# ros_ai_task

./: .gitignore  CMakeLists.txt  README.MD  package.xml  setup.py  task.launch
scripts/: ai.py  camera.py  controller.py  processor.py
src/ros_ai_task/: model.py  model_training.py
srv/: ImagePrediction.srv
